# announcement-service

./: LICENSE  README.md  diagram.drawio.xml  openapi.json  pyproject.toml
app/: main.py  models.py  openapi.py  routes.py  settings.py
tests/: test_main.py
